# downhill

./: .gitignore  404.html  BP.hs  BP.hs_  CHANGELOG.md  README.md  bp.cabal  cabal.project  downhill.cabal  hie.yaml  index.html  sitemap.xml  working-on.txt
doc/: mkdocs.yml
doc/docs/: getstart.md  index.md
doc/docs/intro/: Coolness_fam.hs  Solution.hs  index.md  inline_back.dot  inline_fwd.dot  part1.md  part2.md  part3.md  part4.md
downhill-lib/: CHANGELOG.md  LICENSE  downhill.cabal
downhill-lib/src/: Trace.hs  working-on.txt
downhill-lib/src/Downhill/: BVar.hs  DVar.hs  Grad.hs  Metric.hs  TH.hs
downhill-lib/src/Downhill/BVar/: List.hs  Num.hs  Prelude.hs  Traversable.hs
downhill-lib/src/Downhill/Internal/: Vector.hs
downhill-lib/src/Downhill/Internal/Graph/: Graph.hs  NodeMap.hs  OpenGraph.hs  OpenMap.hs  Sharing.hs  Types.hs
downhill-lib/src/Downhill/Linear/: BackGrad.hs  Backprop.hs  Expr.hs  Graph.hs  Lift.hs  Prelude.hs
downhill-lib/src/Downhill/Manifold/: BackGrad.hs
downhill-lib/test/: Main.hs  Point.hs  Record.hs  TH.hs  TestTHOptions.hs
downhill-lib/test/DownhillTest/: Bilinear.hs  Point.hs  TH.hs  TestTHOptions.hs  Traversable.hs
getstart/: index.html
intro/: Coolness.hs  Intro.hs  Makefile  Tensor.hs  inline_back.dot  part1.md  part2.md  part3.md  part4.md  style.css
intro/part1/: index.html
intro/part2/: index.html
intro/part3/: index.html
js/: mathjax.js
samples/: Affine.hs  Hello.hs  Higher.hs  Newtype.hs  Record.hs  TH.hs  Traversable.hs  Traversal.hs  samples.cabal
samples/src/: Affine.hs  Generics.hs  Hello.hs  Higher.hs  Newtype.hs  Record.hs  TH.hs  Traversable.hs
search/: search_index.json
src/: Affine.hs  Back.hs  Coolness.hs  Diff.hs  EType.hs  Expr.hs  ExprRef.hs  ExprWalker.hs  Grad.hs  Graph.hs  NodeMap.hs  Notensor.hs  OpenGraph.hs  OpenMap.hs  Sharing.hs  Simplify.hs  Tensor.hs  Trace.hs  Types.hs  working-on.txt
src/BVar/: Num.hs  Vec.hs
src/Downhill/: DVar.hs  DVarH.hs  Grad.hs  TH.hs
src/Downhill/BVar/: List.hs  Num.hs  Prelude.hs  Traversable.hs
src/Downhill/DVar/: Prelude.hs
src/Downhill/Internal/Graph/: Graph.hs  NodeMap.hs  OpenGraph.hs  OpenMap.hs
src/Downhill/Linear/: BackGrad.hs  EasyLift.hs  Expr.hs  Graph.hs  Lift.hs  Prelude.hs
src/Downhill/Linear/Graph/: NodeMap.hs  OpenGraph.hs  OpenMap.hs  Sharing.hs  Types.hs
test/: Main.hs  Point.hs  Record.hs
