cabal-version:       2.4

name:                downhill
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrius StankeviÄius
maintainer:          floppycat@gmail.com
-- copyright:
category:            Math
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Downhill.Linear.Expr,
                       Downhill.Linear.BackGrad,
                       Downhill.Linear.Graph,
                       Downhill.Linear.Lift,
                       Downhill.Linear.Prelude,
                       Downhill.Internal.Graph.Types,
                       Downhill.Internal.Graph.OpenMap,
                       Downhill.Internal.Graph.NodeMap,
                       Downhill.Internal.Graph.OpenGraph,
                       Downhill.Internal.Graph.Sharing,
                       Downhill.Internal.Graph.Graph,
                       Downhill.Grad,
                       Downhill.DVar
                       Downhill.BVar.Num,
                       Downhill.BVar.Prelude,
                       Downhill.BVar.Traversable
                       Downhill.TH
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12.0.0 && <4.14,
                       vector-space,
                       constraints,
                       containers, unordered-containers,
                       transformers,
                       reflection,
                       adjunctions,
                       data-fix,
                       singletons ^>= 3.0,
                       these,
                       semialign,
                       manifolds-core,
                       tagged,
                       singletons,
                       constrained-categories,
                       template-haskell

  hs-source-dirs:      src
  other-modules:       Trace
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hello
  main-is:             Hello.hs
  build-depends:       base, downhill, vector-space, lens, free, distributive, transformers,
                       vector, dlist, containers, template-haskell
  hs-source-dirs:      samples
  default-language:    Haskell2010

executable higher
  main-is:             Higher.hs
  build-depends:       base, downhill, vector-space
  hs-source-dirs:      samples
  default-language:    Haskell2010

executable th
  main-is:             TH.hs
  build-depends:       base, downhill, template-haskell, lens
  hs-source-dirs:      samples
  default-language:    Haskell2010

test-suite bp-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Point
  build-depends:       base, downhill, tasty, tasty-hunit
  hs-source-dirs:      test
  default-language:    Haskell2010
