cabal-version:       2.4

name:                downhill-samples
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrius Stankevičius
maintainer:          floppycat@gmail.com

executable hello
  main-is:             Hello.hs
  build-depends:       base, downhill, vector-space, lens, free, distributive, transformers,
                       vector, dlist, containers, template-haskell
  hs-source-dirs:      .
  default-language:    Haskell2010

executable higher
  main-is:             Higher.hs
  build-depends:       base, downhill, vector-space
  hs-source-dirs:      .
  default-language:    Haskell2010

executable affine
  main-is:             Affine.hs
  build-depends:       base, downhill, vector-space
  hs-source-dirs:      .
  default-language:    Haskell2010

executable record
  main-is:             Record.hs
  build-depends:       base, downhill, vector-space
  hs-source-dirs:      .
  default-language:    Haskell2010

executable newtype
  main-is:             Newtype.hs
  build-depends:       base, downhill, vector-space
  hs-source-dirs:      .
  default-language:    Haskell2010

executable th
  main-is:             TH.hs
  build-depends:       base, downhill, template-haskell, lens, vector-space
  hs-source-dirs:      .
  default-language:    Haskell2010

executable traversable
  main-is:             Traversable.hs
  build-depends:       base, downhill, template-haskell, lens, vector-space
  hs-source-dirs:      .
  default-language:    Haskell2010
